--- a/src/framework/theme/components/card/card.component.scss
+++ b/src/framework/theme/components/card/card.component.scss
@@ -7,17 +7,17 @@
 :host {
   display: flex;
   flex-direction: column;
-  // TODO: I'm not sure about it because body is "flex: 1"
-  overflow: hidden;
+   //TODO: I'm not sure about it because body is "flex: 1"
+  //overflow: hidden;
 
-  nga-card-header {
+  /deep/ nga-card-header {
   }
 
-  nga-card-body {
-    overflow: auto;
-    flex: 1;
+  /deep/ nga-card-body {
+    //flex: 1;
+    //overflow: auto;
   }
 
-  nga-card-footer {
+  /deep/ nga-card-footer {
   }
 }
